--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
       <div id="page-logo">
         <a href="/index.html">Travel Goals</a>
       </div>
-      <nav></nav>
+      <nav>
+        <ul>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/places.html">Destinations</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section></section>
