--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
       </nav>
     </header>
     <main>
-      <section></section>
-      <section></section>
+      <section id="hero">
+        <h1>Joe's Travel Page</h1>
+        <p>Explore the world together.</p>
+        <a href="/places.html" class="button">Discover places</a>
+      </section>
+      <section id="highlights"></section>
     </main>
     <footer></footer>
   </body>
