--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
     </header>
     <main>
       <section id="hero">
-        <h1>Joe's Travel Page</h1>
-        <p>Explore the world together.</p>
-        <a href="/places.html" class="button">Discover places</a>
+        <div id="hero-content">
+          <h1>Joe's Travel Page</h1>
+          <p>Explore the world together.</p>
+          <a href="/places.html" class="button">Discover places</a>
+        </div>
       </section>
       <section id="highlights"></section>
     </main>
