--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
     <footer>
       <ul>
         <li>
-          <a href="https://www.instagram.com"></a>
-            <img src="/images/icons/insta.png" alt="Instagram logo" /> </a>
+          <a href="https://www.instagram.com">
+            <img src="/images/icons/insta.png" alt="Instagram logo" />
+          </a>
         </li>
         <li>
           <a href="https://www.facebook.com">
-            <img src="/images/icons/facebook.png" alt="Facebook logo"/> </a>
+            <img src="/images/icons/facebook.png" alt="Facebook logo" />
+          </a>
         </li>
       </ul>
     </footer>
