--- a/places.html
+++ b/places.html
@@ -23,7 +23,25 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <ul>
+        <li>
+          <img src="/images/places/barcelona.jpg" alt="City of Barcelona" />
+          <div class="item-content">
+            <h2>Barcelona</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis
+              debitis dicta assumenda fugit, asperiores impedit sed mollitia
+              veniam!
+            </p>
+          </div>
+          <div class="actions">
+            <a href="https://en.wikipedia.org/wiki/Barcelona" target="_blank"
+              >Explore</a
+            >
+          </div>
+        </li>
+      </ul>
     </main>
     <footer>
       <ul>
