minor code refinmenet

--- a/places.html
+++ b/places.html
@@ -36,9 +36,9 @@
             </p>
           </div>
           <div class="actions">
-            <a href="https://en.wikipedia.org/wiki/Barcelona" target="_blank"
-              >Explore</a
-            >
+            <a href="https://en.wikipedia.org/wiki/Barcelona" target="_blank">
+              Explore
+            </a>
           </div>
         </li>
       </ul>
