styling the explore button

--- a/places.html
+++ b/places.html
@@ -36,7 +36,7 @@
             </p>
             <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Barcelona" target="_blank">
-                Explore
+                <strong>Explore -></strong>
               </a>
             </div>
           </div>
