--- a/places.html
+++ b/places.html
@@ -28,15 +28,17 @@
         <li>
           <img src="/images/places/barcelona.jpg" alt="City of Barcelona" />
           <div class="item-content">
-            <h2>Barcelona</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis
-              debitis dicta assumenda fugit, asperiores impedit sed mollitia
-              veniam!
-            </p>
+            <div>
+              <h2>Barcelona</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Facilis debitis dicta assumenda fugit, asperiores impedit sed
+                mollitia veniam!
+              </p>
+            </div>
             <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Barcelona" target="_blank">
-                <strong>Explore -></strong>
+                Explore ->
               </a>
             </div>
           </div>
